SERVER-39208 ignore InterruptedAtShutdown in ARS dtor

opCtx->runWithoutInterruption can throw InterruptedAtShutdown from
opCtx->checkForInterrupt during system shutdown.  As long as we use
that, we should catch and ignore failure to cleanup in that case.